add slider content- spacer content and styles

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
     
     <title>Lingulo App</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans|Baumans' rel='stylesheet' type='text/css'/>
   </head>
   <body>
     
